--- a/show.css
+++ b/show.css
@@ -5,3 +5,29 @@ td{
   height: 30px;
   border: 1px solid black;
 }
+
+.square{
+  float:left;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  background: green;
+}
+
+.mid{
+  width: 50%;
+  height: 50%;
+  position: relative;
+  background: black;
+  margin: auto;
+  top: 20%;
+
+}
+.inner{
+  width: 50%;
+  height: 50%;
+  background: yellow;
+  position: relative;
+  top: 20%;
+  margin: auto;
+}
